<resources>
    <string-array name="brand_array">
        <item>Samsung</item>
        <item>Sony</item>
        <item>Xiaomi</item>
        <item>Apple</item>
        <item>Google</item>
    </string-array>
    <string-array name="locations">
        <item>Narre Warren East</item>
        <item>Alun Alun German, Sugio</item>
    </string-array>
    <string-array name="prices_array">
        <item>300$ - 500$</item>
        <item>500$ - 700$</item>
        <item>700$ - 1000$</item>
    </string-array>
    <string-array name="size_array">
        <item>4.5 to 5 inches</item>
        <item>5.5 to 6 inches</item>
        <item>more 6 inches</item>
    </string-array>
    <string name="app_name">DevicesMarket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_category_string">Select Category</string>
    <string name="view_all_string">view all</string>
    <string name="apply_string">By now!</string>
    <string name="done_string">done</string>
    <string name="filter_options_string">Filter options</string>
    <string name="brand_string">Brand</string>
    <string name="price_string">Price</string>
    <string name="size_string">Size</string>
    <string name="phones_string">Phones</string>
    <string name="computer_string">Computer</string>
    <string name="books_string">Books</string>
    <string name="another_string">Another</string>
    <string name="health_string">Health</string>
    <string name="search_string">Search</string>
    <string name="select_color_and_capacity_string">Select color and capacity</string>
    <string name="_256_gb_string">256 Gb</string>
    <string name="_128_gb_string">128 Gb</string>
    <string name="add_address_string">Add address</string>
    <string name="my_cart_string">My Cart</string>
    <string name="total_string">Total</string>
    <string name="delivery_string">Delivery</string>
    <string name="explorer_string">• Explorer</string>
    <string name="dollar">$%d</string>
    <string name="hot_sales_string">Hot sales</string>
    <string name="see_more_string">see more</string>
    <string name="best_seller_string">Best Seller</string>
    <string name="new_string">New</string>
</resources>