<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:elevation="5dp"
    android:layout_marginBottom="-10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_button"
            style="@style/StyleSquareButton"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:foreground="@drawable/ic_baseline_close_24"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/filter_options_string"
            android:textColor="@color/black"
            android:textSize="11pt"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toEndOf="@id/close_button"
            app:layout_constraintTop_toTopOf="@id/close_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/orange"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/done_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/brand_string"
            android:textColor="@color/black"
            android:textSize="11pt"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/close_button" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/brand_spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:dropDownVerticalOffset="20dp"
            android:entries="@array/brand_array"
            style="@style/SpinnerStyle"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/info_title"
            app:strokeColor="@color/black"
            app:strokeWidth="50dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_string"
            android:textColor="@color/black"
            android:textSize="11pt"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/brand_spinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/price_spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:dropDownVerticalOffset="20dp"
            android:entries="@array/prices_array"
            style="@style/SpinnerStyle"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/price_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/size_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/size_string"
            android:textColor="@color/black"
            android:textSize="11pt"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/price_spinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/size_spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:dropDownVerticalOffset="20dp"
            android:entries="@array/size_array"
            style="@style/SpinnerStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/size_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>