<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/select_category_string"
        android:textStyle="bold"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filterReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:text="@string/view_all_string"
        android:textColor="@color/orange"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@id/titleCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/titleCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/buttons_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCategory" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/listMode"
        app:layout_constraintEnd_toStartOf="@+id/listMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listMode"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconTint="@color/orange"
        app:startIconDrawable="@drawable/ic_find">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:hint="@string/search_string"
            android:padding="0dp"
            tool:text="Some text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/listMode"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:foreground="@drawable/ic_window"
        android:foregroundGravity="center"
        android:background="@drawable/round_background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchText"
        app:layout_constraintTop_toBottomOf="@id/buttons_recycler" />
</androidx.constraintlayout.widget.ConstraintLayout>