<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/headerGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/black"
            android:foreground="@drawable/ic_baseline_navigate_before_24"
            android:foregroundGravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/add_address_string"
            android:textColor="@color/black"
            android:textSize="11pt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:foreground="@drawable/ic_baseline_navigate_before_24"
            android:foregroundGravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cartTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/my_cart_string"
        android:textColor="@color/black"
        android:textSize="15pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orderCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerGroup" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/orderCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itemsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_weight="4"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:paddingStart="30dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/top_and_bottom_border"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/total_string"
                        android:textColor="@color/white"
                        android:textSize="9pt" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_address_string"
                        android:textColor="@color/white"
                        android:textSize="9pt"
                        tool:text="$6,000us" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/delivery_string"
                        android:textColor="@color/white"
                        android:textSize="9pt" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="9pt"
                        tool:text="free" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/orange"
                tool:text="Checkout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>