<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/bottom">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/localeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/categoryLayoutContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="80dp"
            android:layout_weight="0"
            android:padding="1dp"
            android:src="@drawable/ic_location" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/brandSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="80dp"
            android:layout_weight="1"
           android:theme="@style/Spinner"
            android:background="@drawable/location_spiner_background"
            android:entries="@array/locations" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:padding="1dp"
            android:src="@drawable/ic_tool" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/categoryLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localeHeader">

        <include
            android:id="@+id/topSheet"
            layout="@layout/category_layout" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryLayoutContainer">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/hot_sales_string"
                            android:textSize="10pt"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end|center"
                            android:text="@string/see_more_string"
                            android:textColor="@color/orange"
                            android:textSize="8pt" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/pager"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/best_seller_string"
                            android:textSize="10pt"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end|center"
                            android:text="@string/see_more_string"
                            android:textColor="@color/orange"
                            android:textSize="8pt" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/devicesRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:spanCount="2" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/explorer_string"
                android:textColor="@color/white"
                android:textSize="6pt" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/to_cart_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_bucket" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_like" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_account" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <include
            android:id="@+id/filterLayout"
            layout="@layout/filter_layout" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>